[package]
name = "mpv-client"
version = "0.1.3"
edition = "2021"
authors = ["Kevin Gavrois <kevin@gavrois.fr>"]
description = "Bindings for libmpv client API that allow you to create plugins for MPV in Rust"
license = "LGPL-2.1"
repository = "https://github.com/TheCactusVert/mpv-client"
keywords = ["mpv", "libmpv"]

[lib]
name = "mpv_client"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
